Drop oas2 support (#55)